syntax = "proto3";

package wso2.discovery.subscription;

import "wso2/discovery/subscription/application_policy.proto";

option go_package = "github.com/envoyproxy/go-control-plane/wso2/discovery/subscription;subscription";
option java_package = "org.wso2.choreo.connect.discovery.subscription";
option java_outer_classname = "ApplicationPolicyListProto";
option java_multiple_files = true;

// [#protodoc-title: ApplicationPolicyList]

// ApplicationPolicyList data model
message ApplicationPolicyList {
    repeated ApplicationPolicy list = 2;
}
